[package]
name = "partial_sort"
version = "0.1.0"
authors = ["sundy-li <543950155@qq.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/sundy-li/partial_sort"
description = "Lazy sorting for iterators"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = ">= 0.3, <= 0.5"

[dev-dependencies]
