[package]
name = "partial_sort"
edition = "2018"
version = "0.2.1"
authors = ["sundy-li <543950155@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sundy-li/partial_sort"
homepage = "https://github.com/sundy-li/partial_sort"
description = "This library provide a Rust version std::partial_sort"
readme = "README.md"

include = ["src/", "LICENSE-*", "README.md"]

[lib]
name = "partial_sort"
bench = false

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

# Uncomment this if you want to do benchmark
# [[bench]]
# name = "sort"
# harness = false
